# aria-bsv

./: .gitignore  Dockerfile  LICENSE  README.md  alembic.ini  docker-compose.yml  pyproject.toml
.github/: dependabot.yml
.github/actions/verify-epoch/: action.yml
.github/workflows/: ci.yml  go.yml  playground.yml  release.yml  rust.yml  security.yml  typescript.yml  verify-epoch.yml
aria/: __init__.py  ab_testing.py  agent_trace.py  alerts.py  analytics.py  anchoring.py  async_auditor.py  auditor.py  auto_config.py  backup.py  benchmark.py  canary.py  certify.py  cli.py  compare.py  compliance.py  config_file.py  cost_estimator.py  cost_tracker.py  dashboard.py  dataset.py  dp_ledger.py  drift.py  eth_anchor.py  events.py  export_bundle.py  federation.py  gdpr.py  hsm.py  import_from.py  iso42001.py  jupyter.py  lineage.py  mcp_server.py  metrics.py  model_card.py  multimodal.py  multisig.py  multitenancy.py  nist_rmf.py  (+24 more)
aria/broadcaster/: __init__.py  arc.py  base.py
aria/contracts/: __init__.py  bonding.py  notarization.py  registry.py
aria/core/: __init__.py  epoch.py  errors.py  hasher.py  merkle.py  record.py
aria/integrations/: __init__.py  anthropic_sdk.py  autogen.py  azure_openai.py  cohere.py  crewai.py  django.py  dspy.py  fastapi.py  flask.py  google_gemini.py  huggingface.py  instructor.py  langchain.py  langgraph.py  litellm.py  llamaindex.py  mistral.py  mlflow.py  ollama.py  openai.py  sagemaker.py  semantic_kernel.py  smolagents.py  vault.py  vertexai.py  vllm.py  wandb.py
aria/storage/: __init__.py  _schema.py  base.py  postgres.py  sqlite.py
aria/telemetry/: __init__.py  otel.py
aria/wallet/: __init__.py  base.py  brc100.py  direct.py  hd.py  keygen.py  utxo.py
aria/zk/: __init__.py  aggregate.py  base.py  claims.py  ezkl_prover.py  mock_prover.py  statement.py
deploy/helm/aria-auditor/: Chart.yaml  values.yaml
deploy/helm/aria-auditor/templates/: _helpers.tpl  deployment.yaml  hpa.yaml  ingress.yaml  pvc.yaml  service.yaml  serviceaccount.yaml
deploy/prometheus/: prometheus.yml
deploy/terraform/environments/production/: main.tf  terraform.tfvars.example  variables.tf
deploy/terraform/modules/arc/: main.tf  outputs.tf  variables.tf
deploy/terraform/modules/database/: main.tf  outputs.tf  variables.tf
deploy/terraform/modules/gcp/arc/: main.tf  outputs.tf  variables.tf
deploy/terraform/modules/gcp/database/: main.tf  outputs.tf  variables.tf
examples/kairos/: main.py
examples/minimal/: main.py
migrations/: env.py
migrations/versions/: 0001_initial_schema.py
portal/: __init__.py
portal/backend/: __init__.py  _rate_limit.py  api.py  graphql.py  websocket.py
portal/frontend/: index.html
portal/playground/: index.html  package-lock.json  package.json  vite.config.ts
portal/playground/src/: App.tsx  index.css
portal/playground/src/components/: DatasetDemo.tsx  HashDemo.tsx  VerifyDemo.tsx
portal/playground/src/lib/: crypto.ts
registry/: __init__.py  api.py  models.py  schemas.py  storage.py
sdk-dotnet/: AriaBsv.sln  README.md
sdk-dotnet/AriaBsv.Core/: AriaBsv.Core.csproj  AuditRecord.cs  Hasher.cs  InferenceAuditor.cs  MerkleTree.cs
sdk-dotnet/AriaBsv.Tests/: AriaBsv.Tests.csproj  HasherTests.cs  MerkleTreeTests.cs
sdk-go/: README.md  go.mod
sdk-go/auditor/: auditor.go  auditor_test.go
sdk-go/hasher/: hasher.go  hasher_fuzz_test.go  hasher_test.go
sdk-go/merkle/: merkle.go  merkle_fuzz_test.go  merkle_test.go
sdk-java/: .gitignore  README.md  build.gradle  settings.gradle
sdk-java/src/main/java/io/aria/bsv/auditor/: AuditRecord.java  InferenceAuditor.java
sdk-java/src/main/java/io/aria/bsv/hasher/: CanonicalJson.java  Hasher.java
sdk-java/src/main/java/io/aria/bsv/merkle/: MerkleException.java  MerkleTree.java
sdk-java/src/test/java/io/aria/bsv/auditor/: InferenceAuditorTest.java
sdk-rs/: Cargo.toml  README.md
sdk-rs/auditor/: Cargo.toml
sdk-rs/auditor/src/: lib.rs
sdk-rs/hasher/: Cargo.toml
sdk-rs/hasher/src/: lib.rs
sdk-rs/merkle/: Cargo.toml
sdk-rs/merkle/src/: lib.rs
sdk-rs/wasm/: Cargo.toml
sdk-rs/wasm/src/: lib.rs
sdk-ts/: .npmignore  README.md  package-lock.json  package.json  tsconfig.json
sdk-ts/src/: auditor.test.ts  auditor.ts  broadcaster.test.ts  broadcaster.ts  compliance.test.ts  compliance.ts  dataset.test.ts  dataset.ts  ethereum.test.ts  ethereum.ts  hasher.test.ts  hasher.ts  index.ts  merkle.test.ts  merkle.ts  multimodel.test.ts  multimodel.ts  nostr.test.ts  nostr.ts  overlay.test.ts  overlay.ts  spv.test.ts  spv.ts  streaming.test.ts  streaming.ts  types.ts  verifier.test.ts  verifier.ts
sdk-ts/src/contracts/: contracts.test.ts  epoch_contract.ts  index.ts  registry_contract.ts  scrypt_adapter.ts  timelock_contract.ts
tests/: django_settings.py
tests/chaos/: test_broadcast_failure.py  test_concurrent.py  test_key_logging.py
tests/cross_sdk/: test_consistency.py  vectors.json
tests/perf/: test_bench_auditor.py  test_bench_hasher.py  test_bench_merkle.py  test_bench_report.py
tests/property/: test_commitment_prover_properties.py  test_hasher_properties.py  test_merkle_properties.py  test_overlay_properties.py  test_spv_properties.py  test_utxo_properties.py
tests/unit/: test_ab_testing.py  test_agent_trace.py  test_alerts.py  test_analytics.py  test_anchoring.py  test_anthropic_integration.py  test_aria_init.py  test_async_auditor.py  test_auditor.py  test_auto_config.py  test_autogen_integration.py  test_azure_openai_integration.py  test_backup.py  test_benchmark.py  test_broadcaster.py  test_canary.py  test_certify.py  test_cli.py  test_cohere_integration.py  test_compare.py  test_compliance.py  test_config_file.py  test_contracts.py  test_cost_estimator.py  test_cost_tracker.py  test_crewai_integration.py  test_dashboard.py  test_dataset_anchoring.py  test_dp_ledger.py  test_drift.py  test_dspy_integration.py  test_epoch.py  test_eth_anchor.py  test_events.py  test_export_bundle.py  test_ezkl_prover.py  test_fastapi_integration.py  test_federation.py  test_gdpr.py  test_google_gemini_integration.py  (+74 more)
(+2 files in other folders)
