[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "aria-bsv"
version = "0.1.0"
description = "Auditable Real-time Inference Architecture — BRC-120 reference implementation"
readme = "README.md"
license = { file = "LICENSE" }
requires-python = ">=3.11"
keywords = ["bsv", "blockchain", "ai", "audit", "inference", "accountability", "brc-120"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Topic :: Security :: Cryptography",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
]

# Core dependencies — only what each phase actually requires.
# Phase 0 (core crypto) uses only the standard library.
# Phases 1+ introduce the dependencies below.
dependencies = [
    "pymerkletools>=1.0",    # Merkle tree utilities (listed per CLAUDE.md §Regla 5)
    "pydantic>=2.0",         # Data validation (AuditConfig, portal schemas)
    "httpx>=0.27",           # Async HTTP client (BRC-100 wallet, ARC broadcaster)
    "sqlalchemy>=2.0",       # ORM for storage backends
    "fastapi>=0.110",        # Portal and registry APIs
    "uvicorn[standard]>=0.29",
]

[project.optional-dependencies]
bsv = [
    "bsvlib>=0.4",              # BSV wallet + transaction building (DirectWallet)
]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "pytest-cov>=5.0",
    "ruff>=0.4",
    "mypy>=1.10",
    "hatch>=1.9",
    "bandit>=1.7",              # SAST — security analysis
    "pip-audit>=2.7",           # Dependency vulnerability scanning
    "httpx>=0.27",              # Already a core dep, repeated for editable installs
    "bsvlib>=0.4",              # Needed for DirectWallet tests
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP"]
ignore = ["E501"]

[tool.mypy]
python_version = "3.11"
strict = true
