[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "aria-bsv"
version = "0.5.1"
description = "Auditable Real-time Inference Architecture — BRC-121 reference implementation"
readme = "README.md"
license = { file = "LICENSE" }
requires-python = ">=3.10"
authors = [
    { name = "Juan Manuel Palencia Osorio" },
]
keywords = ["bsv", "blockchain", "ai", "audit", "inference", "accountability", "brc-121", "compliance", "eu-ai-act"]

classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "Topic :: Security :: Cryptography",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

dependencies = [
    "pydantic>=2.0",
    "httpx>=0.27",
    "sqlalchemy>=2.0",
    "fastapi>=0.110",
    "uvicorn[standard]>=0.29",
    "tomli>=2.0; python_version < '3.11'",
]

[project.urls]
Homepage = "https://github.com/JuanmPalencia/aria-bsv"
Repository = "https://github.com/JuanmPalencia/aria-bsv"
Documentation = "https://github.com/JuanmPalencia/aria-bsv/tree/main/docs"
"Bug Tracker" = "https://github.com/JuanmPalencia/aria-bsv/issues"

[project.scripts]
aria = "aria.cli:main"

[project.optional-dependencies]
bsv = [
    "bsvlib>=0.4",              # BSV wallet + transaction building (DirectWallet)
]
cli = [
    "click>=8.1",               # CLI framework (pip install aria-bsv[cli])
]
zk = [
    "ezkl>=9.0",                # Halo2/KZG ZK prover for ONNX models (pip install aria-bsv[zk])
    "onnx>=1.16",               # ONNX model loading/inspection
]
postgres = [
    "psycopg2-binary>=2.9",     # PostgreSQL driver  (pip install aria-bsv[postgres])
    "alembic>=1.13",            # Schema migration management
]
django = [
    "django>=4.2",              # Django web framework integration
]
flask = [
    "flask>=3.0",               # Flask web framework integration
]
langchain = [
    "langchain-core>=0.2",      # LangChain callback handler
]
redis = [
    "redis>=5.0",               # Redis pub-sub event bus (pip install aria-bsv[redis])
]
prometheus = [
    "prometheus-client>=0.20",  # Prometheus metrics export (pip install aria-bsv[prometheus])
]
openai = [
    "openai>=1.0",              # OpenAI API client wrapper
]
anthropic = [
    "anthropic>=0.30",          # Anthropic API client wrapper
]
huggingface = [
    "transformers>=4.40",       # HuggingFace Transformers pipeline wrapper
]
mlflow = [
    "mlflow>=2.0",              # MLflow experiment tracking integration
]
wandb = [
    "wandb>=0.17",              # Weights & Biases integration
]
nostr = [
    "websockets>=12.0",         # Nostr relay WebSocket publishing
]
ethereum = [
    "web3>=6.0",                # Ethereum RPC (optional — falls back to raw JSON-RPC)
]
otel = [
    "opentelemetry-api>=1.24",  # OpenTelemetry tracing and metrics
    "opentelemetry-sdk>=1.24",
]
jupyter = [
    "ipython>=8.0",             # Jupyter/IPython cell magic support
]
litellm = [
    "litellm>=1.0",             # Unified LLM interface (100+ providers)
]
dspy = [
    "dspy-ai>=2.0",             # Stanford DSPy programmatic LLM prompting
]
instructor = [
    "instructor>=1.0",          # Structured outputs with Pydantic models
]
smolagents = [
    "smolagents>=1.0",          # HuggingFace SmolAgents lightweight agent framework
]
semantic_kernel = [
    "semantic-kernel>=1.0",     # Microsoft Semantic Kernel AI SDK
]
mcp = [
    "mcp>=1.0",                 # Model Context Protocol server (LLM self-auditing)
]
all = [
    "bsvlib>=0.4",
    "click>=8.1",
    "ezkl>=9.0",
    "onnx>=1.16",
    "psycopg2-binary>=2.9",
    "alembic>=1.13",
    "django>=4.2",
    "flask>=3.0",
    "langchain-core>=0.2",
    "redis>=5.0",
    "prometheus-client>=0.20",
    "openai>=1.0",
    "anthropic>=0.30",
    "transformers>=4.40",
    "mlflow>=2.0",
    "wandb>=0.17",
    "websockets>=12.0",
    "web3>=6.0",
    "opentelemetry-api>=1.24",
    "opentelemetry-sdk>=1.24",
    "ipython>=8.0",
    "litellm>=1.0",
    "dspy-ai>=2.0",
    "instructor>=1.0",
    "smolagents>=1.0",
    "semantic-kernel>=1.0",
    "mcp>=1.0",
    "tomli>=2.0; python_version < '3.11'",
]
dev = [
    "click>=8.1",               # CLI (needed for test_cli.py)
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "pytest-cov>=5.0",
    "pytest-timeout>=2.3",      # Test timeouts
    "hypothesis>=6.100",        # Property-based testing
    "ruff>=0.4",
    "mypy>=1.10",
    "hatch>=1.9",
    "bandit>=1.7",              # SAST — security analysis
    "pip-audit>=2.7",           # Dependency vulnerability scanning
    "httpx>=0.27",              # Already a core dep, repeated for editable installs
    "bsvlib>=0.4",              # Needed for DirectWallet tests
    "alembic>=1.13",            # Migration testing
    "django>=4.2",              # Django integration tests
    "flask>=3.0",               # Flask integration tests
    "werkzeug>=3.1.6",          # security floor: CVE-2025-66221, CVE-2026-21860, CVE-2026-27199
    "langchain-core>=0.2",      # LangChain integration tests
    "prometheus-client>=0.20",  # Prometheus metrics tests
    "litellm>=1.0",             # LiteLLM integration tests
    "dspy-ai>=2.0",             # DSPy integration tests
    "instructor>=1.0",          # Instructor integration tests
    "smolagents>=1.0",          # SmolAgents integration tests
    "semantic-kernel>=1.0",     # Semantic Kernel integration tests
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP"]
ignore = ["E501"]

[tool.hatch.build.targets.wheel]
packages = ["aria"]

[tool.mypy]
python_version = "3.11"
strict = true
