[workspace]
members = ["hasher", "merkle", "auditor", "wasm"]
resolver = "2"

[workspace.package]
version = "0.1.0"
edition = "2021"
authors = ["Juan Manuel Palencia Osorio"]
license = "MIT"
repository = "https://github.com/JuanmPalencia/aria-bsv"
description = "ARIA BRC-121 Rust SDK — high-performance AI audit sidecar"

[workspace.dependencies]
sha2 = "0.11"
hex = "0.4"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
uuid = { version = "1", features = ["v4"] }
chrono = { version = "0.4", features = ["serde"] }
