[package]
name = "aria-bsv-wasm"
description = "ARIA BRC-121 WebAssembly bindings — browser and Node.js compatible"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
aria-bsv-hasher = { path = "../hasher" }
aria-bsv-merkle = { path = "../merkle" }
wasm-bindgen = "0.2"
js-sys = "0.3"
serde = { workspace = true }
serde_json = { workspace = true }
wasm-bindgen-futures = "0.4"

[dev-dependencies]
wasm-bindgen-test = "0.3"

[features]
default = ["console_error_panic_hook"]
console_error_panic_hook = ["dep:console_error_panic_hook"]

[dependencies.console_error_panic_hook]
version = "0.1"
optional = true
